--- a/redirect.html
+++ b/redirect.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <!-- Redirects user back to index page -->
 <meta http-equiv="refresh" content="10; url=http://ngivney.comyr.com/github/HTMLMETAREF/index.html">
 <p>This page redirects you back to the index page in 10 seconds.</p>
 <p><a href="http://ngivney.comyr.com/github/HTMLMETAREF/index.html"><i>Click here if you are not redirected automatically </i></a></p>
