--- a/refresh.html
+++ b/refresh.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <!-- Refresh page every 10 seconds -->
 <meta http-equiv="refresh" content="10; url=http://ngivney.comyr.com/github/HTMLMETAREF/refresh.html">
 <p>This page automatically refreshes every ten seconds</p>
 </body></html>
